sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:18: error: ';' expected but 'while' found.
  }while(ecart>1 || inv=1)
   ^